minor reconciliation fix